# variadic

./: CMakeLists.txt  README.md  comprehension.cpp  filter.hpp  foldl.hpp  max.cpp  max.hpp  pack.hpp  quicksort.hpp  reverse.cpp  reverse.hpp
test/: CMakeLists.txt  filter.cpp  foldl.cpp  max.cpp  pack.cpp  quicksort.cpp
